# ObjectDetection

./: .gitignore  README.md  export_yolov8_to_onnx.py  object_detection.py  requirements.txt  test_onnx_model.py
ObjectDetectionCpp/: CMakeLists.txt  README.md
ObjectDetectionCpp/src/: main.cpp  object_detector.cpp  object_detector.h
